--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 <a name="please-take-the-udacity-android-course" class="anchor" href="#please-take-the-udacity-android-course"><span class="octicon octicon-link"></span></a>Please take the udacity android <a href="https://www.udacity.com/course/viewer#!/c-ud853">course</a>
 </h3>
 
+<h3>
+<a name="home" class="anchor" href="#home"><span class="octicon octicon-link"></span></a><a href="https://laazer.github.io">Home</a>
+</h3>
+
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
 $ git checkout gh-pages
